--- a/CountdownTimer.css
+++ b/CountdownTimer.css
@@ -1,92 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
 body {
-	font-family: 'Roboto', sans-serif;
-	
-	background-color: #1f1f1f; 
-	color: #fff;
-	text-align: center;
-	margin: 50px;
-  }
- 
-  h1 {
-	
-	font-family: 'Pacifico', cursive;
-	font-size: 2.5em;
-	color: #fff; 
-	margin-bottom: 20px;
-  }
-  #countdown:hover {
-	background: linear-gradient(45deg, #cc33a6, #6e20f4); /* Gradient background color on hover */
-	box-shadow: 5px 10px 18px #888888;
-  }
-  #countdown {
-	height: 300px;
-	width: 900px;
-	margin-top: 105px;
-	margin-left:95px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	background: linear-gradient(45deg, #9933cc, #3498db);
-	border-radius: 8px;
-	padding: 20px;
-	box-shadow: 5px 10px 18px #7a84de;
-	overflow: hidden;
-	position: relative;
-	transition: background 0.5s ease; /* Smooth transition for background color */
-  }
-  
-  .countdown-item {
-	text-align: center;
-	margin: 5px;
-  }
-  
-  #day-box {
-	padding: 10px;
-	padding-top:25px ;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
-	width: 150px;
-	height: 80px;
-	background-color: #ebc311; 
+    font-family:'Monda','sans serif';
+    margin: 0;
+    padding: 0;
+    background:url('http://www.pixelstalk.net/wp-content/uploads/2016/05/Black-Abstract-HD-Wallpaper.jpg');
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
+}
+
+#countdown {
+    height: 300px;
+    width: 900px;
+    margin-top: 105px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(12, 12, 12, 0.4);
+    border-radius: 8px;
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+    transition: background 0.5s ease;
+}
+
+.countdown-item {
+    text-align: center;
+    margin: 5px;
+}
+
+#day-box {
+    padding: 10px;
+    padding-top: 35px;
+    border-radius: 40px;
+    background: linear-gradient(45deg,  #075f2a,#46ce6b,#bce0a0);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    width: 100px;
+    height: 80px;
+    margin-top: 155px;
   }
   
   #hour-box {
-	padding: 10px;
-	padding-top:25px ;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
-	width: 150px;
-	height: 80px;
-	background-color: #e00d7a; 
+    padding: 10px;
+    padding-top: 35px;
+    border-radius: 40px;
+    background: linear-gradient(45deg,  #13298d,#3c83ba,#87d7e2);
+   
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    width: 100px;
+    height: 80px;
+    margin-top: 155px;
   }
   
   #minute-box {
-	padding: 10px;
-	padding-top:25px ;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
-	width: 150px;
-	height: 80px;
-	background-color: #4caf50; 
+    padding: 10px;
+    padding-top: 35px;
+    border-radius: 40px;
+    background: linear-gradient(45deg,  #cc9900,#cc9900,#ffff99);
+    
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    width: 100px;
+    height: 80px;
+    margin-top: 155px;
 	
   }
   
   #second-box {
-	padding: 10px;
-	padding-top:25px ;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
-	width: 150px;
-	height: 80px;
-	background-color: #ff5722; 
+    padding: 10px;
+    padding-top: 35px;
+    border-radius: 40px;
+    background: linear-gradient(45deg,  #af1a32,#ba3c88,#e7aad5);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
+    width: 100px;
+    height: 80px;
+    margin-top: 155px;
   }
+
+.countdown-number {
+    font-size: 2em;
+    color: #fff;
+}
+
+.countdown-label {
+    color: #f5f3f3;
+}
+#myheanding {
+    font-family: 'Titillium Web', sans-serif; 
+    position: fixed;
+    margin-bottom: 250px;
   
-  .countdown-number {
-	font-size: 2em;
-	color: #fff;
-  }
-  
-  .countdown-label {
-	color: #555;
-  }
-  
+}
+
+
